# ezc

./: .gitignore  :q  :w  Cargo.toml  README.md  book.toml  build.rs  lib.ez  tmp.ez
.github/workflows/: rust.yml
docs/: 404.html  arrays_and_ptrs.html  chapter_1.html  functions.html  index.html  installing.html  loops.html  modules.html  print.html  searchindex.js  searchindex.json  stdlib.html  vars_and_conds.html
lib/: .gitignore  build.zig
lib/src/: lib.zig  main.zig
src/: SUMMARY.md  analyse.rs  analyze.rs  arrays_and_ptrs.md  ast.rs  cmdline.rs  codegen.rs  errors.rs  functions.md  installing.md  lexer.rs  loops.md  main.rs  main.zig  modules.md  parser.rs  stdlib.md  vars_and_conds.md
tests/: arrays.ez  binary_stuff.ez  fib.ez  fibrec.ez  gen_output.sh  hello_world.ez  if.ez  invalid_parse.ez  localvars.ez  newarrays.ez  nsquaredalg.ez  set_array_stuff.ez  test.ez  test.sh
tests/cinterface/: Makefile  lib.ez  main.c  ref  ref.c  tmp.ez
tests/intended/: arrays.ez.output  binary_stuff.ez.output  cinterface.output  module.output  nsquaredalg.ez.output  test.ez.output
tests/invalid/: analyze.ez  lex.ez  parse.ez
tests/module/: Makefile  lib.ez  lib1.ez  main.ez  tmp.ez
tests/usezig/: .gitignore  Makefile  build.zig  main.ez
tests/usezig/src/: main.zig
